#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-35
2018-01-31 Mikhail S. Dubrovin
- refactor Utils, add new pnccd cm correction in det interface
	modified:   examples/ex_pnccd_plot_in_evloop.py
	modified:   src/AreaDetector.py
	modified:   src/PyDetectorAccess.py
	new file:   src/UtilsCommonMode.py
	modified:   src/UtilsJungfrau.py
	modified:   src/UtilsPNCCD.py

2018-01-30 Mikhail S. Dubrovin
- comment print in UtilsJungfrau.py

Tag: V01-00-34
2018-01-30 Mikhail S. Dubrovin
- fix numpy indexing in UtilsJungfrau.py, add UtilsPNCCD.py, update ex_pnccd_plot_in_evloop.py

Tag: V01-00-33
???

Tag: V01-00-32
2017-12-11 Daniel Damiani
- DetectorTypes.py - add new BLD for MEC analog input to bld_info

Tag: V01-00-31
2017-12-11 Mikhail S. Dubrovin
- PyDetector.DetInfo - fix bug in regular expression pattern and re-definition global var dt

2017-12-07 Mikhail S. Dubrovin
- modified: examples/ex_epix10ka.py

Tag: V01-00-30
2017-12-06 Mikhail S. Dubrovin
- add support for epix10ka
	new file:   ex_epix10ka.py
	new file:   ex_epix10ka_ipython.py
	modified:   ../src/DetectorTypes.py
	modified:   ../src/PyDataAccess.py
	modified:   ../src/PyDetectorAccess.py

2017-12-04 Mikhail S. Dubrovin
- add tname='5' in ex_jungfrau_images.py

Tag: V01-00-29
2017-11-29 Mikhail S. Dubrovin
- UtilsJungfrau - fix common mode correction if all pixels in row/col masked.

2017-11-28 Mikhail S. Dubrovin
- add a couple of examples ex_hdf5_*

2017-11-20 Mikhail S. Dubrovin
- add UtilsJungfrau in doc/web/index.rst

Tag: V01-00-28
2017-11-09 Mikhail S. Dubrovin
- PyDataAccess.py - add Jungfrau.ConfigV3
- add example examples/ex_pnccd_plot_in_evloop.py

Tag: V01-00-27
2017-11-03 Daniel Damiani