@@ -99,6 +99,7 @@ def test_pnccd_graph() :
         if peds is not None : nda -= peds
 
         #nda = np.multiply(nda, mask)
+        if gain is not None : nda *= gain
 
         #--------------------
         t0_sec = time()
@@ -110,8 +111,7 @@ def test_pnccd_graph() :
         #common_mode_pnccd(nda, mask, cmp=(8,4,500))  # median in columns 512               (0.12 s/evt)
         #common_mode_pnccd(nda, None, cmp=(8,4,500))  # median in columns 512               (0.09 s/evt)
         #common_mode_pnccd(nda, mask, cmp=(8,8,500))  # median in banks_512x128             (0.16 s/evt)
-        #common_mode_pnccd(nda, None, cmp=(8,8,500))  # median in banks_512x128             (0.25 s/evt)
- 
+        #common_mode_pnccd(nda, None, cmp=(8,8,500))  # median in banks_512x128             (0.25 s/evt) 
         common_mode_pnccd(nda, mask, cmp=(8,5,500))   # median in rows 128 and columns 512  (0.40 s/evt) THE BEST
         #common_mode_pnccd(nda, mask, cmp=(8,7,500))  # median combined                     (0.65 s/evt)
         #common_mode_pnccd(nda, mask, cmp=(8,13,500)) # median combined                     (0.43 s/evt)
@@ -120,12 +120,12 @@ def test_pnccd_graph() :
         #d.common_mode_apply(evt, nda, (3, 348, 348, 128))   # old C++ correction            (0.11 s/evt)
         #d.common_mode_apply(evt, nda, (8,5,500), mask=mask) # new py                        (0.41 s/evt)
         #nda = d.calib(evt, (8,5,500), mask=mask) # generic calib method with mask parameter (0.45 s/evt)
-    
+
         print 'ex_pnccd_plot_in_evloop: CM consumed time (sec) =', time()-t0_sec
         #--------------------
 
-        if gain is not None : nda *= gain
-        #if mask is not None : nda *= mask
+        mask_badpix = d.status_as_mask(evt)
+        if mask_badpix is not None : nda *= mask_badpix
 
         #nda = mask
         #nda = gain
