@@ -7,6 +7,12 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-36
+2018-02-01 Mikhail S. Dubrovin
+- pnccd common mode - evaluate cm correction for masked pixels, apply for all in group
+	modified:   examples/ex_pnccd_plot_in_evloop.py
+	modified:   src/UtilsCommonMode.py
+
 Tag: V01-00-35
 2018-01-31 Mikhail S. Dubrovin
 - refactor Utils, add new pnccd cm correction in det interface
